--- a/scss/portal/_navbar.scss
+++ b/scss/portal/_navbar.scss
@@ -25,7 +25,7 @@ nav[role="navigation"] {
       h1.wordmark {
         width: 156px; 
         height: 31px;
-        background: url('/inc/img/ucsc_logo3.png') no-repeat top left;
+        background: url('/inc/img/ucsc_logo.png') no-repeat top left;
         @media
           only screen and (-webkit-min-device-pixel-ratio: 2),
           only screen and (   min--moz-device-pixel-ratio: 2),
