--- a/scss/fontello_old3/fontello.scss
+++ b/scss/fontello_old3/fontello.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?77206962');
-  src: url('../font/fontello.eot?77206962#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?77206962') format('woff'),
-       url('../font/fontello.ttf?77206962') format('truetype'),
-       url('../font/fontello.svg?77206962#fontello') format('svg');
+  src: url('../fonts/fontello.eot?96099818');
+  src: url('../fonts/fontello.eot?96099818#iefix') format('embedded-opentype'),
+       url('../fonts/fontello.woff?96099818') format('woff'),
+       url('../fonts/fontello.ttf?96099818') format('truetype'),
+       url('../fonts/fontello.svg?96099818#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?77206962#fontello') format('svg');
+    src: url('../font/fontello.svg?96099818#fontello') format('svg');
   }
 }
 */
@@ -117,26 +117,3 @@
 .icon-up-circle:before { content: '\e840'; } /* '' */
 .icon-sun:before { content: '\e841'; } /* '' */
 .icon-moon:before { content: '\e842'; } /* '' */
-.icon-help:before { content: '\e843'; } /* '' */
-.icon-commerical-building:before { content: '\e844'; } /* '' */
-.icon-warehouse:before { content: '\e845'; } /* '' */
-.icon-food:before { content: '\e846'; } /* '' */
-.icon-youtube:before { content: '\e847'; } /* '' */
-.icon-facebook:before { content: '\e848'; } /* '' */
-.icon-foursquare:before { content: '\e849'; } /* '' */
-.icon-instagram:before { content: '\e84a'; } /* '' */
-.icon-itunes:before { content: '\e84b'; } /* '' */
-.icon-reddit:before { content: '\e84c'; } /* '' */
-.icon-calendar:before { content: '\e84d'; } /* '' */
-.icon-calendar-1:before { content: '\e84e'; } /* '' */
-.icon-doc:before { content: '\e84f'; } /* '' */
-.icon-info:before { content: '\e850'; } /* '' */
-.icon-money:before { content: '\e851'; } /* '' */
-.icon-flashlight:before { content: '\e852'; } /* '' */
-.icon-stopwatch:before { content: '\e853'; } /* '' */
-.icon-belowground-rail:before { content: '\e854'; } /* '' */
-.icon-paper-plane:before { content: '\e855'; } /* '' */
-.icon-rocket:before { content: '\e856'; } /* '' */
-.icon-direction:before { content: '\e857'; } /* '' */
-.icon-location-1:before { content: '\e858'; } /* '' */
-.icon-cab:before { content: '\e859'; } /* '' */
