--- a/scss/portal/_variables.scss
+++ b/scss/portal/_variables.scss
@@ -14,7 +14,7 @@ $gray-heading:					          #828583 !default;
 $gray-border:					            #D8D8D8 !default;
 $blue-border:                     #0F67BF !default;
 $light-gray-border:               #EFEFEF !default;
-//$assertive:                       #ef4e3a !default;
+$assertive:                       #DC4042 !default;
 //$royal:                           #8a6de9 !default;
 $dark:                            #2e2e2e !default;
 
