--- a/www/inc/css/main.css
+++ b/www/inc/css/main.css
@@ -2381,6 +2381,15 @@ nav[role="navigation"] {
             padding-right: 12px;
             font-weight: 100;
             color: #727779; }
+            nav[role="navigation"] section[role="nav"] ul a li span i sup {
+              font-style: normal;
+              font-weight: 400;
+              color: #959A9B;
+              font-size: 12px;
+              vertical-align: super;
+              margin-left: -3px; }
+          nav[role="navigation"] section[role="nav"] ul a li span i.warn {
+            color: #DC4042; }
     nav[role="navigation"] section[role="nav"] ul a:hover, nav[role="navigation"] section[role="nav"] ul a.active {
       color: #ffffff; }
       nav[role="navigation"] section[role="nav"] ul a:hover i, nav[role="navigation"] section[role="nav"] ul a.active i {
@@ -3080,3 +3089,106 @@ article[role="news"] {
     left: 100%;
 }
 */
+.ng-modal-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #273a47;
+  opacity: 0.5;
+  -ms-filter: "alpha(opacity = 50)"; }
+
+.ng-modal-container {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999; }
+
+.ng-modal-container .ng-modal {
+  width: 400px;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  background: #ffffff;
+  border-radius: 3px;
+  border: 1px solid #2f2f2f;
+  text-align: center; }
+
+.ng-modal-container .ng-modal .btn {
+  margin: 20px; }
+
+.ng-modal-container .ng-modal .ng-modal-close {
+  color: grey;
+  position: relative;
+  top: 0;
+  left: 0;
+  float: right;
+  text-align: right;
+  text-decoration: none; }
+
+.ng-modal-container .ng-modal .ng-modal-close:hover {
+  color: grey; }
+
+.emergency-modal {
+  position: absolute;
+  /* makes the div go into a position that’s absolute to the browser viewing area */
+  top: 0;
+  /* positions the div half way vertically */
+  background-color: #DC4042;
+  opacity: 0.95;
+  -ms-filter: "alpha(opacity = 95)";
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  /* makes the div the top layer, so it’ll lay on top of the other content */
+  overflow-x: hidden;
+  overflow-y: scroll; }
+  .emergency-modal button {
+    border: none;
+    background-color: transparent;
+    color: #ffffff;
+    font-size: 48px;
+    padding: 0 5px;
+    margin: 10px 0 0 0;
+    position: absolute;
+    z-index: 2; }
+  .emergency-modal button:hover {
+    color: #fff;
+    cursor: pointer; }
+  .emergency-modal ul {
+    width: 60%;
+    margin: 8% auto;
+    list-style-type: none;
+    color: #ffffff; }
+    .emergency-modal ul li {
+      padding: 25px 0;
+      border-bottom: 1px #DD6F6E solid;
+      font-size: 14px; }
+      .emergency-modal ul li span.time {
+        font-weight: 500; }
+      .emergency-modal ul li span.date {
+        font-weight: 200;
+        padding-left: 10px;
+        color: #eeeeee; }
+      .emergency-modal ul li span.division {
+        font-weight: 200;
+        padding-left: 10px;
+        color: #eeeeee; }
+      .emergency-modal ul li div.text {
+        padding-top: 10px;
+        font-size: 18px;
+        line-height: 1.45em; }
+      .emergency-modal ul li a {
+        color: #eeeeee; }
+      .emergency-modal ul li a:hover {
+        color: #ffffff; }
+    .emergency-modal ul li:last-child {
+      border: none; }
