updated superscript nav settings

--- a/www/inc/css/main.css
+++ b/www/inc/css/main.css
@@ -2385,7 +2385,7 @@ nav[role="navigation"] {
               font-style: normal;
               font-weight: 400;
               color: #959A9B;
-              font-size: 12px;
+              font-size: 11px;
               vertical-align: super;
               margin-left: -3px; }
           nav[role="navigation"] section[role="nav"] ul a li span i.warn {
@@ -2394,6 +2394,8 @@ nav[role="navigation"] {
       color: #ffffff; }
       nav[role="navigation"] section[role="nav"] ul a:hover i, nav[role="navigation"] section[role="nav"] ul a.active i {
         color: #CCCECE; }
+        nav[role="navigation"] section[role="nav"] ul a:hover i sup, nav[role="navigation"] section[role="nav"] ul a.active i sup {
+          color: #ffffff; }
 
 main {
   margin-left: 0;
