--- a/scss/portal/_navbar.scss
+++ b/scss/portal/_navbar.scss
@@ -201,7 +201,7 @@ nav[role="navigation"] {
                               font-style: normal;
                               font-weight: 400;
                               color: $gray;
-                              font-size: 12px;
+                              font-size: 11px;
                               vertical-align: super;
                               margin-left: -3px;
                             }
@@ -226,6 +226,10 @@ nav[role="navigation"] {
 
     			i {
     				color: #CCCECE;
+
+                    sup {
+                      color: $light;
+                    }
     			}
     		}
     	}
