--- a/src/app/emergency/emergency-contacts/emergency-contacts.tpl.html
+++ b/src/app/emergency/emergency-contacts/emergency-contacts.tpl.html
@@ -1,10 +1,10 @@
 <article class="list" role="emergency">
     <header>
+        <div class="articletitle">
+            <h1><span>Contacts</span></h1>
+        </div>
         <div class="buttonleft">
             <button ui-sref="emergency" class="left-nav icon-cancel-circled"></button>
-        </div>
-        <div class="wrapper">
-            <h1><span>Contacts</span></h1>
         </div>
         <div class="buttonright">
             <button class="right-nav icon-colon" ng-click="topbar()"></button>
