--- a/src/app/emergency/emergency.tpl.html
+++ b/src/app/emergency/emergency.tpl.html
@@ -7,7 +7,7 @@
             <button ui-sref="dashboard" class="left-nav icon-cancel-circled"></button>
         </div>
         <div class="buttonright">
-            <button class="right-nav icon-colon" ng-click="topbar()"></button>
+            <button class="right-nav icon-colon" ng-click="topbar()" ng-class="{active: !isTop}"></button>
         </div>
     </header>
     <section class="body">
