--- a/src/app/dashboard/dashboard.tpl.html
+++ b/src/app/dashboard/dashboard.tpl.html
@@ -1,21 +1,90 @@
 <article role="dashboard" class="detail">
-    <div class="buttonleft">
-        <!--<button ui-sref="emergency" class="left-nav icon-cancel-circled"></button>-->
-    </div>
-    <div class="wrapper">
-        <h1><span>Dashboard</span></h1>
-    </div>
-    <div class="buttonright">
-        <!--<button class="right-nav icon-colon" ng-click="topbar()"></button>-->
-    </div>
+    <header>
+        <div class="articletitle">
+            <h1>
+                <span class="location">Santa Cruz, CA</span>
+                <span class="time" current-time="h:mm a"></span>
+                <span class="date" current-time="EEE, MMMM d, y"></span>
+            </h1>
+        </div>
+        <div class="buttonleft">
+            <!--<button ui-sref="emergency" class="left-nav icon-cancel-circled"></button>-->
+        </div>
+        <div class="buttonright">
+            <button class="right-nav icon-colon" ng-click="topbar()" ng-class="{active: !isTop}"></button>
+        </div>
     </header>
     <section role="body">
-        <h1>Welcome...</h1>
-        <p>
-            Thanks for visiting the UCSC Mobile Portal. We’re just getting started, but our goal is to build a one-stop tool for accessing all the information you’re looking for about UCSC.
-        </p>
-        <p>
-            We’ll be “soft-launching” this application, posting new modules as soon as they’re ready. Please play around and let us know what you think.
-        </p>
+        <div class="module_about">
+            <div class="mod-label">UC Santa Cruz</div>
+            <div class="mod-body">
+                <p>
+                    Thanks for visiting the UCSC Mobile Portal. We’re just getting started, but our goal is to build a one-stop tool for accessing all the information you’re looking for about UCSC.
+                </p>
+                <p>
+                    We’ll be “soft-launching” this application, posting new modules as soon as they’re ready. Please play around and let us know what you think.
+                </p>
+            </div>
+            <div class="mod-address">
+                <ul>
+                    <li>1152 High Street <br />Santa Cruz, CA 95064</li>
+                    <li>(831) 459-0111</li>
+                </ul>
+            </div>
+
+        </div>
+        <div class="module_weather">
+            <div class="mod-label">Weather</div>
+            <div class="mod-body">
+                <ul class="temps">
+                    <li>
+                        <span class="temp">76</span>
+                    </li>
+                    <li>
+                        <span class="day">Tue</span>
+                        <span class="temp">76</span>
+                    </li>
+                    <li>
+                        <span class="day">Wed</span>
+                        <span class="temp">76</span>
+                    </li>
+                    <li>
+                        <span class="day">Thu</span>
+                        <span class="temp">76</span>
+                    </li>
+                    <li>
+                        <span class="day">Fri</span>
+                        <span class="temp">76</span>
+                    </li>
+                    <li>
+                        <span class="day">Sat</span>
+                        <span class="temp">76</span>
+                    </li>
+                    <li>
+                        <span class="day">Sun</span>
+                        <span class="temp">76</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="module_surf">
+            <div class="mod-label">
+                Surf
+                <span class="low-tide"></span>
+                <span class="high-tide"></span>
+                <span class="source"></span>
+            </div>
+            <div class="mod-body">
+                <div class="swell">
+
+                </div>
+                <div class="tide">
+
+                </div>
+                <div class="wind">
+
+                </div>
+            </div>
+        </div>
     </section>
 </article>
