--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,6 +10,7 @@ $header-font-family: $base-font-family;
 ///////////////////////////////////////////////////////////////////////////////
 $base-font-size: 1em;
 $medium-font-size: .8125em;
+$ninety-font-size: .97em;
 $base-line-height: $base-font-size * 1.5;
 $base-border-radius: em(3);
 
@@ -18,10 +19,12 @@ $base-border-radius: em(3);
 
 $blue: #0059B5;
 $dark-blue: #001129;
-$yellow: #FFE552;
+$yellow: #FCC800;
 $dark-gray: #333;
+$darkish-gray: #666;
 $gray: #959A9B;
 $medium-gray: #999;
+$mediumish-gray: #aaa;
 $light-gray: #ececec;
 $light-red: #FBE3E4;
 $light-yellow: #FFF6BF;
