--- a/src/app/navigation/articles/structure/detail.scss
+++ b/src/app/navigation/articles/structure/detail.scss
@@ -2,10 +2,12 @@ main {
   article.detail {
     float: none;
     width: calc(100% - 274px);
+    height: calc(100% + 10px);
     border-right: none;
 
     @include breakpoint(one-col) {
       width: auto;
+      height: calc(100% + 60px);
     }
     @include breakpoint(two-col) {
       width: auto;
@@ -24,9 +26,81 @@ main {
           display: none;
         }
       }
+    }
+
+    section.body {
+      div.title {
+        //background-color: $light-gray;
+        color: $dark-gray;
+        //height: 64px;
+        //width: 100%;
+        margin: 20px 20px 40px 50px;
+        padding: 0 0 10px 0;
+        border-bottom: 1px $gray-border solid;
 
 
+        h1 {
+          font-size: 24px;
+          padding: 20px 0 0 0;
+          //padding: 44px 5% 0 15%;
+          color: $dark;
+        }
+        p {
+//          font-size: $font-size-base;
+          padding: 10px 0;
+
+        }
+        span {
+          float: right;
+          padding: 0 0 10px 20px;
+          background-color: white;
+        }
+        img {
+
+          border: 1px solid $light-gray;
+          background-color: white;
+          width: 125px;
+          height: auto;
+        }
+      }
+
+
+
+
+      ul.icons {
+        a {
+          border: none;
+        }
+          li {
+            background-color: white;
+            border-bottom: 1px solid $light-gray;
+            padding: 8px 8px 8px 55px;
+            position: relative;
+
+          }
+
+          i.icon {
+            color: $mediumish-gray;
+            font-size: 22px;
+            position: absolute;
+            left: 0;
+            padding: 0 20px;
+          }
+
+        li.link {
+          i.icon {
+            top: 15px;
+          }
+        }
+
+        a:hover, a.active {
+          li {
+            background-color: $light-gray;
+          }
+        }
+      }
     }
 
   }
 }
+
