--- a/src/app/dashboard/dashboard.tpl.html
+++ b/src/app/dashboard/dashboard.tpl.html
@@ -28,10 +28,13 @@
             <div class="mod-address">
                 <ul>
                     <li class="icon-location">
-                        <a ng-href="www.google.com">1152 High Street <br />Santa Cruz, CA 95064</a>
+                        <a ng-href="https://www.google.com/maps/place/University+of+California,+Santa+Cruz/@36.9911461,-122.0589837,15z/data=!4m7!1m4!3m3!1s0x808e41a2ff8cbf4f:0x3a8e3b7c928320d5!2sUniversity+of+California,+Santa+Cruz!3b1!3m1!1s0x808e41a2ff8cbf4f:0x3a8e3b7c928320d5">1152 High Street <br />Santa Cruz, CA 95064</a>
                     </li>
                     <li class="icon-telephone">
                         <a ng-href="tel:+018314590111">(831) 459-0111</a>
+                    </li>
+                    <li class="icon-location">
+                        <a ng-href="http://www.ucsc.edu">Campus Website</a>
                     </li>
                 </ul>
             </div>
