--- a/src/app/navigation/articles/structure/new.scss
+++ b/src/app/navigation/articles/structure/new.scss
@@ -42,8 +42,13 @@ main {
 
           a {
             color: $dark-gray;
-            font-style: italic;
+//            font-style: italic;
             border-bottom: none;
+          }
+
+          a:hover, a.active {
+//              background-color: $light-gray;
+
           }
 
           div.date {
