--- a/src/app/navigation/topnav/topnav.scss
+++ b/src/app/navigation/topnav/topnav.scss
@@ -29,6 +29,9 @@ main header.topnavbar {
     .state-3 & {
       width: 100% !important;
     }
+    .state-4 & {
+      width: 100% !important;
+    }
   }
 
   &.topbar {
