--- a/src/app/news/news.tpl.html
+++ b/src/app/news/news.tpl.html
@@ -1,7 +1,7 @@
-<article class="news" role="news">
+<article class="menu" role="news">
     <header>
         <div class="articletitle">
-            <h1><span>News</span></h1>
+            <h1><span>Campus</span> News</h1>
         </div>
         <div class="buttonleft">
             <button ui-sref="dashboard" class="left-nav icon-cancel-circled"></button>
@@ -11,13 +11,16 @@
         </div>
     </header>
     <section class="body">
-        <!--{{news | json}}-->
         <ul>
-            <li ng-repeat="item in news">
-                <div ng-bind-html='item.title | createAnchors'></div>
-                <div class="date">{{item.publishedDate | rssDate}}</div>
-                <div>{{item.contentSnippet}} <span class="link"><a href="{{item.link}}" target="_blank">Full Article</a></span></div>
-            </li>
+            <a ng-repeat="item in news" ui-sref-active="active" ui-sref=".feed({url:'{{item.url}}'})">
+                <li>
+					<span>
+						<!--<i aria-hidden="true" class="{{item.icon}}"></i>-->
+						<h2>{{item.title}}</h2>
+						<div>{{item.teaser}}</div>
+					</span>
+                </li>
+            </a>
         </ul>
     </section>
 </article>
