added parking and restrooms to map module

--- a/src/less/articles/map.less
+++ b/src/less/articles/map.less
@@ -530,3 +530,24 @@
 .leaflet-label-left:after {
 	content: "";
 }
+
+article.map-key {
+	.breakpoint(one-col; {
+       	float: none;
+       	width: auto;
+       	display: none;
+	});
+	
+}
+
+article.map {
+	.scrollable-header {
+		display: none;
+		.breakpoint(one-col; {
+	       	float: none;
+	       	width: auto;
+	       	display: block;
+		});
+	}
+	
+}
